@@ -158,7 +158,7 @@ The project's Home Page is at http://github.com/zeromq/pyzmq
 
 It can be used to run a subscriber or publisher from outside of
 Metatrader, to receive or send information. For example, look at
-`OTZmqSubscribe.py` and `OTZmqPublish.py` in the `bin` directory of
+`OTZmqSubscribe.py` and `OTZmqRequest.py` in the `bin` directory of
 https://github.com/OpenTrading/OTMql4Zmq/
 
 We have used the latest version at the time of writing, but we expect
@@ -186,6 +186,12 @@ and then in a command console, run
 The ZeroMQ messages will be sent from Mt4, via Python pyzmq,
 to the pyzmq in OTZmqSubscribe.py.
 
+The **really** nice thing about this is that you can run the Python code
+that you will be running with Mt4 from the command line Python for
+testing and debugging. When it's all working with tests, you then just
+wire up the call into Python from Mt4 as a last step. We have some worries
+about performance, but for the moment, we will just put testing in place.
+
 Run
 `python OTZmqSubscribe.py --help `
 for details on the command-line options. `tick timer bar` says that
@@ -195,5 +201,13 @@ are defined in the EA code.
 This is Mt4 publishing the information that the Python script
 `OTZmqSubscribe.py` subscribes to. We will have the other direction shortly,
 where a Python script requests from Mt4 for things like account
-information and placing orders.
+information and placing orders, using the script `OTZmqRequest.py`.
+
+You can test the code that will be called by Mt4 by going to the
+`OTMqlPy/MQL4/Python/OTMql427/` directory and executing
+`python ZmqChart.py` when yo already have started an instance of
+`python OTZmqSubscribe.py -v 4 tick timer bar retval`
+You should see messages being generated by `ZmqChart` and printed by
+`OTZmqSubscribe`. Make sure that this is working before you try
+using `ZmqChart` from Mt4.
 
